--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,10 @@ collections:
 
 # Navigation
 navigation:
-- text: about
-  url: /about/
-- text: blog
-  url: /blog/
+#- text: about
+#  url: /about/
+#- text: blog
+#  url: /blog/
 
 defaults:
   -
@@ -58,222 +58,3 @@ defaults:
       path: "data"
     values:
       layout: null
-
-# Configurations for Prose
-# https://github.com/prose/prose/wiki/Prose-Configuration
-prose:
-  siteurl: "http://qsel.columbia.edu"
-  ignore:
-  - _config.yml
-  - docker-compose.yml
-  - CNAME
-  - /css
-  - /assets/js
-  - /assets/uploads/blog
-  - /assets/uploads/projects
-  - /assets/uploads/theme
-  - Gemfile
-  - .gitignore
-  - .travis.yml
-  - /_includes
-  - /_layouts
-  - /_sass
-  - /_helpful_scripts
-  - feed.xml
-  - README.md
-  - index.html
-  - index.md
-  - tags.html
-  - /blog/archive
-  media: "assets/uploads"
-  metadata:
-    about/_posts:
-      - name: "published"
-        field:
-          element: "hidden"
-          value: true
-      - name: "title"
-        field:
-          element: "text"
-    _team:
-      - name: "published"
-        field:
-          element: "hidden"
-          value: true
-      - name: "status"
-        field:
-          element: "select"
-          label: "Team member status"
-          options:
-            - name: "Current"
-              value: "current"
-            - name: "Former"
-              value: "former"
-      - name: "full_name"
-        field:
-          element: "text"
-          label: "Full name"
-      - name: "photo"
-        field:
-          element: "select"
-          label: "Photo file path:"
-          options: "http://sel-columbia.github.io/data/team_photos.jsonp?callback=team_photos"
-      - name: "position"
-        field:
-          element: "text"
-          label: "Position"
-      - name: "email"
-        field:
-          element: "text"
-          label: "E-mail address"
-      - name: "github"
-        field:
-          element: "text"
-          label: "GitHub username"
-      - name: "employer"
-        field:
-          element: "text"
-          label: "Employer"
-    blog/_posts:
-      - name: "published"
-        field:
-          element: "hidden"
-          value: true
-      - name: "title"
-        field:
-          element: "text"
-      - name: "author"
-        field:
-          element: "select"
-          label: "Author:"
-          options: "http://sel-columbia.github.io/data/authors.jsonp?callback=authors"
-      - name: "tags"
-        field:
-          element: "multiselect"
-          label: "Tags:"
-          options: "http://sel-columbia.github.io/data/tags.jsonp?callback=tags"
-          alterable: true
-    jobs/_posts:
-      - name: "published"
-        field:
-          element: "hidden"
-          value: true
-      - name: "title"
-        field:
-          element: "text"
-      - name: "author"
-        field:
-          element: "select"
-          label: "Author:"
-          options: "http://sel-columbia.github.io/data/authors.jsonp?callback=authors"
-      - name: "tags"
-        field:
-          element: "multiselect"
-          label: "Tags:"
-          options: "http://sel-columbia.github.io/data/tags.jsonp?callback=tags"
-          alterable: true
-    products-tools/_posts:
-      - name: "published"
-        field:
-          element: "hidden"
-          value: true
-      - name: "title"
-        field:
-          element: "text"
-      - name: "image-link"
-        field:
-          element: "text"
-          label: "Product or Tool URL"
-      - name: "image-source"
-        field:
-          element: "select"
-          label: "Image file path:"
-          options: "http://sel-columbia.github.io/data/images.jsonp?callback=images"
-      - name: "image-alt"
-        field:
-          element: "text"
-          label: "Alt-text for the image"
-      - name: "image-height"
-        field:
-          element: "number"
-          label: "Image height in pixels"
-      - name: "image-width"
-        field:
-          element: "number"
-          label: "Image width in pixels"
-    projects/_posts:
-      - name: "published"
-        field:
-          element: "hidden"
-          value: true
-      - name: "title"
-        field:
-          element: "text"
-      - name: "author"
-        field:
-          element: "select"
-          label: "Author:"
-          options: "http://sel-columbia.github.io/data/authors.jsonp?callback=authors"
-      - name: "tags"
-        field:
-          element: "multiselect"
-          label: "Tags:"
-          options: "http://sel-columbia.github.io/data/tags.jsonp?callback=tags"
-          alterable: true
-      - name: "type"
-        field:
-          element: "select"
-          label: "Project type"
-          options:
-            - name: "ICT4D and Development Planning"
-              value: "ICT4D and Development Planning"
-            - name: "Sustainable Energy"
-              value: "Sustainable Energy"
-      - name: "image"
-        field:
-          element: "select"
-          label: "Image file path:"
-          options: "http://sel-columbia.github.io/data/images.jsonp?callback=images"
-      - name: "main_link"
-        field:
-          element: "text"
-          label: "Main project URL"
-      - name: "project_page"
-        field:
-          element: "text"
-          label: "Project page URL"
-      - name: "full_report"
-        field:
-          element: "text"
-          label: "Full report URL"
-      - name: "related_blog_entries"
-        field:
-          element: "select"
-          label: "URL for related blog entries' tag:"
-          options: "http://sel-columbia.github.io/data/related_blog_entries.jsonp?callback=related_blog_entries"
-      - name: "location"
-        field:
-          element: "text"
-          label: "Project location"
-      - name: "summary"
-        field:
-          element: "textarea"
-          label: "Project summary"
-    publications/_posts:
-      - name: "published"
-        field:
-          element: "hidden"
-          value: true
-      - name: "title"
-        field:
-          element: "text"
-      - name: "link"
-        field:
-          element: "text"
-          label: "Publication URL"
-      - name: "tags"
-        field:
-          element: "multiselect"
-          label: "Tags:"
-          options: "http://sel-columbia.github.io/data/tags.jsonp?callback=tags"
-          alterable: true
